* Add the ability the specify, after a `#` character, the output filename of libraries extracted by `Loader.load()`